lab-5-kubernetes/Ingress-exemple/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
          - name: app1
            image: hashicorp/http-echo
            args:
            - "-text=Hello from App1"
            ports:
            - containerPort: 5678
